@@ -42,7 +42,6 @@
 /systemd-cgls
 /systemd-cgroups-agent
 /systemd-cgtop
-/systemd-coredump
 /systemd-dbus1-generator
 /systemd-delta
 /systemd-detect-virt
