@@ -25,6 +25,7 @@ systemd System and Service Manager
     - move coredump man pages to separate module journal;
     - move coredump completions to separate module journal;
     - move systemd-coredumpctl to separate module journal;
+    - move systemd-coredump to separate module journal;
  
    systemd (214.2)
 ~~~~~~~
